# veda_QT

./: .gitattributes  CMakeLists.txt  CMakeLists_OpenVINO_Fragment.txt  README.md  XXGgy5ee  build_err.txt  build_stdout.txt  controller_diff.txt  diff.txt  diff_utf8.txt  main_controller_cmd.cpp  main_controller_temp.cpp  main_mainwindowcontroller.cpp  main_mainwindowcontroller.h  main_mainwindowcontroller_utf8.cpp  main_parkingservice.cpp  main_parkingservice.h  main_parkingservice_utf8.cpp  main_vehicletracker.cpp  main_vehicletracker.h  main_vehicletracker_utf8.cpp  mainwindow.cpp  mainwindow.h  metadatathread.cpp  metadatathread.h  ocrmanager.cpp  ocrmanager.h  resources.qrc  videothread.cpp
config/: darktheme.qss  settings.json
docs/: INSTALL_GPU_ACCEL.md  architecture_overview.md  auth-certificate-operations.md  auth-certificate-rollover-checklist.md  database_erd.md  frame-optimization-progress.md  frame-refactor-shared-raw-frame-2026-03-18.md  layered-architecture-guidelines.md  pr-feature-parkpark-to-main.md  pr-live-multiview-layout.md  pr-login-2fa.md  pr-metadata-ffmpeg-library-migration.md  pr-reid-shared-runtime.md  pr-roi-metadata-visibility.md  pr-summary-feature-final-vs-main.md  pr-telegram-parking-consistency.md  recording_report.md  security-operations-guide.md
rpi_viewer/: CMakeLists.txt  main.cpp
src/: architecture_overview.md  main.cpp
src/application/parking/: parkingservice.cpp  parkingservice.h
src/application/roi/: roiservice.cpp  roiservice.h
src/camera/: cameramanager.cpp  cameramanager.h  camerasessionservice.cpp  camerasessionservice.h  camerasource.cpp  camerasource.h
src/config/: XX8ZvMUG  config.cpp  config.h  logfilterconfig.cpp  logfilterconfig.h
src/core/: cameramanager.cpp  cameramanager.h  camerasessionservice.cpp  camerasessionservice.h  config.cpp  logdeduplicator.cpp  logdeduplicator.h  metadatasynchronizer.cpp  metadatasynchronizer.h  roirepository.cpp  roirepository.h  roiservice.cpp  roiservice.h
src/database/: databasecontext.cpp  databasecontext.h  hardwarelogrepository.cpp  hardwarelogrepository.h  mediarepository.cpp  mediarepository.h  userrepository.cpp  userrepository.h  vehiclerepository.cpp  vehiclerepository.h
src/domain/parking/: parkingfeepolicy.cpp  vehicletracker.cpp  vehicletracker.h
src/domain/tracking/: homographytransform.cpp  homographytransform.h  kalmanboxtracker.cpp  kalmanboxtracker.h
src/infrastructure/camera/: cameramanager.cpp  cameramanager.h  camerasessionservice.cpp  camerasessionservice.h  camerasource.cpp  camerasource.h  rtspurl.cpp  rtspurl.h
src/infrastructure/metadata/: ffmpegmetadatastreamreader.cpp  ffmpegmetadatastreamreader.h  metadatasynchronizer.cpp  metadatasynchronizer.h  metadatathread.cpp  metadatathread.h  objectinfo.h  onvifmetadataparser.cpp  onvifmetadataparser.h
src/infrastructure/ocr/: ocrmanager.h  plateocrcoordinator.cpp  plateocrcoordinator.h
src/infrastructure/persistence/: databasecontext.cpp  databasecontext.h  hardwarelogrepository.cpp  mediarepository.cpp  mediarepository.h  parkingrepository.cpp  parkingrepository.h  roirepository.cpp  roirepository.h  userrepository.cpp  userrepository.h  vehiclerepository.cpp  vehiclerepository.h
src/infrastructure/rpi/: rpiauthclient.cpp  rpiauthclient.h  rpicontrolclient.cpp  rpicontrolclient.h  rpitcpclient.cpp  rpitcpclient.h
src/infrastructure/security/: dataprotection.cpp  dataprotection.h
src/infrastructure/telegram/: telegrambotapi.cpp  telegrambotapi.h
src/infrastructure/video/: mediarecorderworker.cpp  sharedvideoframe.h  videobuffermanager.cpp  videothread.cpp  videothread.h
src/infrastructure/vision/: reidextractor.cpp  reidextractor.h
src/logging/: logdeduplicator.cpp  logdeduplicator.h
src/metadata/: metadatasynchronizer.cpp  metadatasynchronizer.h  metadatathread.cpp  metadatathread.h
src/ocr/: ocrevaluator.cpp  ocrevaluator.h  ocrmanager.cpp  ocrmanager.h  ocrtypes.h  plateocrcoordinator.cpp  plateocrcoordinator.h  platerecognizer.cpp  platerecognizer.h
src/ocr/debug/: ocrdebugdumper.cpp  ocrdebugdumper.h
src/ocr/postprocess/: platepostprocessor.cpp  platepostprocessor.h
src/ocr/preprocess/: platepreprocessor.cpp  platepreprocessor.h
src/ocr/recognition/: llmocrrunner.cpp  llmocrrunner.h  paddleocrunner.cpp  paddleocrunner.h  telegramllmrunner.cpp  telegramllmrunner.h  tesseractrunner.cpp  tesseractrunner.h
src/parking/: parkingfeepolicy.cpp  parkingfeepolicy.h  parkingrepository.cpp  parkingrepository.h  parkingservice.cpp  parkingservice.h  vehicletracker.cpp  vehicletracker.h
src/presentation/controllers/: camerasessioncontroller.cpp  camerasessioncontroller.h  cctvcontroller.cpp  cctvcontroller.h  channelruntimecontroller.cpp  channelruntimecontroller.h  dbpanelcontroller.cpp  dbpanelcontroller.h  hardwarecontroller.cpp  hardwarecontroller.h  mainwindowcontroller.cpp  mainwindowcontroller.h  notificationcontroller.cpp  notificationcontroller.h  reidcontroller.cpp  (+16 more)
src/roi/: roirepository.cpp  roirepository.h  roiservice.cpp  roiservice.h
src/rpi/: dbbroadcastserver.cpp  dbbroadcastserver.h  rpiauthclient.cpp  rpiauthclient.h  rpicontrolclient.cpp  rpicontrolclient.h  rpitcpclient.cpp  rpitcpclient.h
src/shared/: result.h
src/srtp/: mikeybuilder.cpp  mikeybuilder.h  rtpdepacketizer.cpp  rtpdepacketizer.h  srtpdecryptor.cpp  srtpdecryptor.h  srtpmetadataparser.cpp  srtpmetadataparser.h  srtporchestrator.cpp  srtporchestrator.h  srtprtspclient.cpp  srtprtspclient.h  srtpsession.cpp  srtpsession.h  srtpvideothread.cpp  srtpvideothread.h
src/telegram/: telegrambotapi.cpp  telegrambotapi.h
src/tracking/: reidextractor.cpp  reidextractor.h
src/ui/: mainwindow.cpp  mainwindow.h  roiinteractionstate.cpp  roiinteractionstate.h  videoframerenderer.cpp  videoframerenderer.h  videowidget.cpp  videowidget.h
src/util/: result.h  rtspurl.cpp  rtspurl.h
src/video/: mediarecorderworker.cpp  mediarecorderworker.h  sharedvideoframe.h  videobuffermanager.cpp  videobuffermanager.h  videothread.cpp  videothread.h
tools/auth/: generate_auth_cert.sh  print_cert_fingerprint.sh
(+91 files in other folders)
